# turbo-repair

./: .gitignore  README.md  docker-compose.yml
backend/: .env  .env.test  Cargo.toml  diesel.toml  docs.md
backend/migrations/2024-05-19-131744_create_users/: up.sql
backend/migrations/2024-06-11-131744_add_unique_constraint_to_users_email/: down.sql  up.sql
backend/migrations/2024-06-11-150000_update_schema/: down.sql  up.sql
backend/migrations/2024-06-11-190816_change_bid_amount_to_double/: down.sql  up.sql
backend/migrations/2024-06-11-192736_change_customer_id_to_not_null/: down.sql  up.sql
backend/migrations/2024-06-11-193239_bid_references_to_not_null/: down.sql  up.sql
backend/migrations/2024-06-11-193455_make_order_columns_non_nullable/: down.sql  up.sql
backend/migrations/2024-06-24-133353_make_foreign_keys_non_nullable/: down.sql  up.sql
backend/migrations/2024-07-08-182801_add_cascade_to_foreign_keys/: down.sql  up.sql
backend/migrations/2024-07-09-171146_create_user_requests_and_staff_tasks/: down.sql  up.sql
backend/src/: lib.rs  main.rs
backend/src/handlers/: address.rs  auth.rs  bid.rs  mod.rs  order.rs  repair_request.rs  repair_shop.rs  staff.rs  staff_task.rs  status_pipeline.rs  user.rs  user_request.rs
backend/src/middleware/: auth.rs  logging.rs  mod.rs  public.rs
backend/src/models/: address.rs  bid.rs  mod.rs  order.rs  repair_request.rs  repair_shop.rs  schema.rs  staff.rs  staff_task.rs  status_pipeline.rs  user.rs  user_request.rs
backend/src/routes/: address.rs  auth.rs  bid.rs  mod.rs  order.rs  staff.rs  (+6 more)
backend/static/: index.html
backend/tests/: full_workflow_test.rs
(+58 files in other folders)
