[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.3"
actix-web = "4"
actix-service = "2.0"
diesel = { version = "2.0", features = ["postgres", "uuid", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
actix-rt = "2"
futures-util = "0.3"
awc = "3"
shaku = "0.6.1"
tokio = { version = "1", features = ["full"] }
rand_core = "0.6"
password-hash = "0.5"
