[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
log = "0.4.21"
env_logger = "0.11.3"
actix-web = "4"
actix-service = "2.0"
diesel = { version = "2.0", features = ["postgres", "uuid", "serde_json", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
actix-rt = "2"
futures-util = "0.3"
awc = "3"
shaku = "0.6.1"
tokio = { version = "1", features = ["full"] }
rand_core = "0.6"
password-hash = "0.5"

[dev-dependencies]
diesel = { version = "2.0", features = ["postgres", "uuid", "serde_json", "chrono", "r2d2"] }
diesel_migrations = "2.2.0"
actix-web = "4.0"
actix-rt = "2.5"
serde_json = "1.0"
once_cell = "1.19"
reqwest = { version = "0.12", features = ["json"] }

[lib]
name = "backend"
path = "src/lib.rs"
